Small cleanups to SimpleHttpServer